--- a/portfolio.html
+++ b/portfolio.html
@@ -237,30 +237,30 @@
         </div>
         <div class="joins-box">
           <h3 class="joins">ПРИЄДНУЙТЕСЬ</h3>
-          <ul class="socials-list">
-            <li class="socials-item">
-              <a class="socials-link" href="#">
+          <ul class="socials-list-foot">
+            <li class="socials-item-foot">
+              <a class="socials-link-foot" href="#">
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
-              <a class="socials-link" href="#">
+            <li class="socials-item-foot">
+              <a class="socials-link-foot" href="#">
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
-              <a class="socials-link" href="#">
+            <li class="socials-item-foot">
+              <a class="socials-link-foot" href="#">
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
-              <a class="socials-link" href="#">
+            <li class="socials-item-foot">
+              <a class="socials-link-foot" href="#">
                 <svg width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
